--- a/10.html
+++ b/10.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=RMuoDd"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=RMuoDd" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=kFo8ob"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=kFo8ob" type="text/css">
 
   
   <meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
@@ -158,7 +158,7 @@ class="adopt-injector"></script>
 				<h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-5">
 					<strong>Cultura</strong></h5>
 				<ul class="list mbr-fonts-style display-7">
-					<li class="mbr-text item-wrap"><a href="2.html" class="text-black text-primary">Estrutura Organizacional</a></li>
+					<li class="mbr-text item-wrap"><a href="estruturaOrgCult.html" class="text-black text-primary">Estrutura Organizacional</a></li>
 					<li class="mbr-text item-wrap"><a href="contatoCult.html" class="text-black text-primary">Contato</a></li>
 				</ul>
 			</div>
@@ -166,14 +166,14 @@ class="adopt-injector"></script>
 				<h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-5">
 					<strong>Turismo</strong></h5>
 				<ul class="list mbr-fonts-style display-7">
-					<li class="mbr-text item-wrap"><a href="estruturaOrgTurismo.html" class="text-black text-primary">Estrutura Organizacional</a></li><li class="mbr-text item-wrap"><a href="contatoTurismo.html" class="text-black text-primary">Contato</a></li><li class="mbr-text item-wrap"><br></li>
+					<li class="mbr-text item-wrap"><a href="3.html" class="text-black text-primary">Estrutura Organizacional</a></li><li class="mbr-text item-wrap"><a href="8.html" class="text-black text-primary">Contato</a></li><li class="mbr-text item-wrap"><br></li>
 				</ul>
 			</div>
 			<div class="col-12 col-md-6 col-lg-3">
 				<h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-5">
 					<strong>Esporte</strong></h5>
 				<ul class="list mbr-fonts-style display-7">
-					<li class="mbr-text item-wrap"><a href="estruturaOrgEsporte.html" class="text-black text-primary">Estrutura Organizacional</a></li><li class="mbr-text item-wrap"><a href="contatoEsporte.html" class="text-black text-primary">Contato</a></li>
+					<li class="mbr-text item-wrap"><a href="4.html" class="text-black text-primary">Estrutura Organizacional</a></li><li class="mbr-text item-wrap"><a href="7.html" class="text-black text-primary">Contato</a></li>
 				</ul>
 			</div>
 			<div class="col-12 col-md-6 col-lg-3">
@@ -183,7 +183,7 @@ class="adopt-injector"></script>
 				</ul>
 			</div>
 			<div class="col-12 mt-5 footer-col">
-				<div class="mbr-section-btn align-left"><a class="btn btn-black display-7" href="1.html">Portal</a> <a class="btn btn-info display-7" href="1.html" target="_blank">Portal</a></div>
+				<div class="mbr-section-btn align-left"><a class="btn btn-black display-7">Portal</a> <a class="btn btn-info display-7" href="index.html" target="_blank">Portal</a></div>
 
 				
 			</div>
