--- a/2.html
+++ b/2.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=7c1JfV"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=7c1JfV" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=gc6QLd"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=gc6QLd" type="text/css">
 
   
   <meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
@@ -67,7 +67,7 @@ class="adopt-injector"></script>
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Cultura</a><div class="dropdown-menu" aria-labelledby="dropdown-621"><a class="text-white dropdown-item text-primary display-4" href="2.html">Estrutura Organizacional</a><a class="text-white dropdown-item text-primary display-4" href="6.html">Contato</a><a class="text-white show dropdown-item text-primary display-4" href="10.html">Biblioteca</a><a class="text-white show dropdown-item text-primary display-4" href="11.html">Museu</a><a class="text-white show dropdown-item text-primary display-4" href="12.html">Cadastro</a></div></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle show display-4" href="#" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Turismo</a><div class="dropdown-menu show" aria-labelledby="dropdown-582" data-bs-popper="none"><a class="text-white show dropdown-item text-primary display-4" href="4.html">Estrutura Organizacional</a><a class="text-white show dropdown-item text-primary display-4" href="8.html">Contato</a><a class="text-white show dropdown-item text-primary display-4" href="1.html" target="_blank">Portal do Turismo</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Esporte</a><div class="dropdown-menu" aria-labelledby="dropdown-965"><a class="text-white dropdown-item text-primary display-4" href="3.html">Estrutura Organizacional</a><a class="text-white show dropdown-item text-primary display-4" href="5.html">Estrutura esportiva</a><a class="text-white dropdown-item text-primary display-4" href="7.html">Contato</a></div>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Cultura</a><div class="dropdown-menu" aria-labelledby="dropdown-621"><a class="text-white dropdown-item text-primary display-4" href="2.html">Estrutura Organizacional</a><a class="text-white dropdown-item text-primary display-4" href="6.html">Contato</a><a class="text-white show dropdown-item text-primary display-4" href="10.html">Biblioteca</a><a class="text-white show dropdown-item text-primary display-4" href="11.html">Museu</a><a class="text-white show dropdown-item text-primary display-4" href="12.html">Cadastro</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle show display-4" href="#" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">Turismo</a><div class="dropdown-menu show" aria-labelledby="dropdown-582" data-bs-popper="none"><a class="text-white show dropdown-item text-primary display-4" href="4.html">Estrutura Organizacional</a><a class="text-white show dropdown-item text-primary display-4" href="8.html">Contato</a><a class="text-white show dropdown-item text-primary display-4" href="1.html" target="_blank">Portal do Turismo</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="#" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">Esporte</a><div class="dropdown-menu" aria-labelledby="dropdown-965"><a class="text-white dropdown-item text-primary display-4" href="3.html">Estrutura Organizacional</a><a class="text-white show dropdown-item text-primary display-4" href="5.html">Estrutura esportiva</a><a class="text-white dropdown-item text-primary display-4" href="7.html">Contato</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-white show text-primary display-4" href="13.html">Ações</a></li><li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="9.html" aria-expanded="false">Parque</a></li></ul>
                 
                 <div class="navbar-buttons mbr-section-btn"><a class="btn btn-white-outline display-4" href="1.html">Portal</a></div>
@@ -171,7 +171,7 @@ class="adopt-injector"></script>
                 </div>
             </div>
             <div class="map-wrapper col-12 col-md-7">
-                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7010.706642321961!2d-49.3273202413086!3d-28.529097962924123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95217449198760f5%3A0x2f51e4314397aadc!2sParque%20Municipal%20Ado%20Cassetari%20Vieira!5e0!3m2!1spt-BR!2sbr!4v1713889907846!5m2!1spt-BR!2sbr" allowfullscreen=""></iframe></div>
+                <div class="google-map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387191.0360977185!2d-74.30933341658171!3d40.69753995848721!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNova%20Iorque%2C%20NY%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1714275885176!5m2!1spt-BR!2sbr" allowfullscreen=""></iframe></div>
             </div>
         </div>
     </div>
@@ -188,7 +188,7 @@ class="adopt-injector"></script>
 				<h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-5">
 					<strong>Cultura</strong></h5>
 				<ul class="list mbr-fonts-style display-7">
-					<li class="mbr-text item-wrap"><a href="2.html" class="text-black text-primary">Estrutura Organizacional</a></li>
+					<li class="mbr-text item-wrap"><a href="estruturaOrgCult.html" class="text-black text-primary">Estrutura Organizacional</a></li>
 					<li class="mbr-text item-wrap"><a href="contatoCult.html" class="text-black text-primary">Contato</a></li>
 				</ul>
 			</div>
@@ -196,14 +196,14 @@ class="adopt-injector"></script>
 				<h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-5">
 					<strong>Turismo</strong></h5>
 				<ul class="list mbr-fonts-style display-7">
-					<li class="mbr-text item-wrap"><a href="estruturaOrgTurismo.html" class="text-black text-primary">Estrutura Organizacional</a></li><li class="mbr-text item-wrap"><a href="contatoTurismo.html" class="text-black text-primary">Contato</a></li><li class="mbr-text item-wrap"><br></li>
+					<li class="mbr-text item-wrap"><a href="3.html" class="text-black text-primary">Estrutura Organizacional</a></li><li class="mbr-text item-wrap"><a href="8.html" class="text-black text-primary">Contato</a></li><li class="mbr-text item-wrap"><br></li>
 				</ul>
 			</div>
 			<div class="col-12 col-md-6 col-lg-3">
 				<h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-5">
 					<strong>Esporte</strong></h5>
 				<ul class="list mbr-fonts-style display-7">
-					<li class="mbr-text item-wrap"><a href="estruturaOrgEsporte.html" class="text-black text-primary">Estrutura Organizacional</a></li><li class="mbr-text item-wrap"><a href="contatoEsporte.html" class="text-black text-primary">Contato</a></li>
+					<li class="mbr-text item-wrap"><a href="4.html" class="text-black text-primary">Estrutura Organizacional</a></li><li class="mbr-text item-wrap"><a href="7.html" class="text-black text-primary">Contato</a></li>
 				</ul>
 			</div>
 			<div class="col-12 col-md-6 col-lg-3">
@@ -213,7 +213,7 @@ class="adopt-injector"></script>
 				</ul>
 			</div>
 			<div class="col-12 mt-5 footer-col">
-				<div class="mbr-section-btn align-left"><a class="btn btn-black display-7" href="1.html">Portal</a> <a class="btn btn-info display-7" href="1.html" target="_blank">Portal</a></div>
+				<div class="mbr-section-btn align-left"><a class="btn btn-black display-7">Portal</a> <a class="btn btn-info display-7" href="index.html" target="_blank">Portal</a></div>
 
 				
 			</div>
