create github pages

--- a/13.html
+++ b/13.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Bv1uAg"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Bv1uAg" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=59Yjra"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=59Yjra" type="text/css">
 
   
   <meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
@@ -77,10 +77,10 @@ class="adopt-injector"></script>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide carousel-fade" id="ubfTOGwbXb" data-ride="carousel" data-bs-ride="carousel" data-interval="6000" data-bs-interval="6000">
+                <div class="carousel slide carousel-fade" id="ubfVyMxq15" data-ride="carousel" data-bs-ride="carousel" data-interval="6000" data-bs-interval="6000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ubfTOGwbXb" data-bs-target="#ubfTOGwbXb"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ubfTOGwbXb" data-bs-target="#ubfTOGwbXb"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#ubfTOGwbXb" data-bs-target="#ubfTOGwbXb"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ubfTOGwbXb" data-bs-target="#ubfTOGwbXb"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ubfVyMxq15" data-bs-target="#ubfVyMxq15"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ubfVyMxq15" data-bs-target="#ubfVyMxq15"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#ubfVyMxq15" data-bs-target="#ubfVyMxq15"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ubfVyMxq15" data-bs-target="#ubfVyMxq15"></li>
                         
                         
                     </ol>
@@ -110,11 +110,11 @@ class="adopt-injector"></script>
                             <a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html"><img class="d-block w-100" src="assets/images/banner-1600x370.webp" alt="" data-slide-to="3" data-bs-slide-to="3"></a></div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ubfTOGwbXb">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ubfVyMxq15">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ubfTOGwbXb">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ubfVyMxq15">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
@@ -266,7 +266,7 @@ class="adopt-injector"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
-   <script src="jquery.mask.min.js"></script>
+  
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
