--- a/2.html
+++ b/2.html
@@ -22,14 +22,12 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=xVO4nk"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=xVO4nk" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=Vb4fu6"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=Vb4fu6" type="text/css">
 
   
   <meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
 <script src="//tag.goadopt.io/injector.js?website_code=6a8616c2-f959-43c9-a0a3-305a9a0b59af" 
 class="adopt-injector"></script>
-
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="crossorigin="anonymous"></script>
   
 
 </head>
