create github pages

--- a/5.html
+++ b/5.html
@@ -20,10 +20,9 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=5tYc2q"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=5tYc2q" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=LVotPJ"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=LVotPJ" type="text/css">
 
   
   <meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
@@ -247,7 +246,6 @@ class="adopt-injector"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/mbr-tabs/mbr-tabs.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/formoid.min.js"></script>
   
   
   
