create github pages

--- a/13.html
+++ b/13.html
@@ -23,7 +23,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=aeHvoX"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=aeHvoX" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=XNZOEs"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=XNZOEs" type="text/css">
 
   
   <meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
@@ -75,10 +75,10 @@ class="adopt-injector"></script>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12">
-                <div class="carousel slide carousel-fade" id="ubhbo27tJF" data-ride="carousel" data-bs-ride="carousel" data-interval="6000" data-bs-interval="6000">
+                <div class="carousel slide carousel-fade" id="ubhh8LiS7k" data-ride="carousel" data-bs-ride="carousel" data-interval="6000" data-bs-interval="6000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ubhbo27tJF" data-bs-target="#ubhbo27tJF"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ubhbo27tJF" data-bs-target="#ubhbo27tJF"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#ubhbo27tJF" data-bs-target="#ubhbo27tJF"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ubhbo27tJF" data-bs-target="#ubhbo27tJF"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#ubhh8LiS7k" data-bs-target="#ubhh8LiS7k"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#ubhh8LiS7k" data-bs-target="#ubhh8LiS7k"></li><li data-slide-to="2" data-bs-slide-to="2" data-target="#ubhh8LiS7k" data-bs-target="#ubhh8LiS7k"></li><li data-slide-to="3" data-bs-slide-to="3" data-target="#ubhh8LiS7k" data-bs-target="#ubhh8LiS7k"></li>
                         
                         
                     </ol>
@@ -108,11 +108,11 @@ class="adopt-injector"></script>
                             <a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html" target="false"></a><a href="page8.html"><img class="d-block w-100" src="assets/images/banner-1600x370.webp" alt="" data-slide-to="3" data-bs-slide-to="3"></a></div>
                         </div>
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ubhbo27tJF">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#ubhh8LiS7k">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ubhbo27tJF">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#ubhh8LiS7k">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
