--- a/6.html
+++ b/6.html
@@ -23,12 +23,12 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=3iV0Rc"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=3iV0Rc" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=fWNsAc"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=fWNsAc" type="text/css">
 
   
-  <meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
+  <!--<meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
 <script src="//tag.goadopt.io/injector.js?website_code=6a8616c2-f959-43c9-a0a3-305a9a0b59af" 
-class="adopt-injector"></script>
+class="adopt-injector"></script>-->
   
 
 </head>
