create github pages

--- a/10.html
+++ b/10.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=PGZrUi"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=PGZrUi" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=R0EUPS"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=R0EUPS" type="text/css">
 
   
   <!--<meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
@@ -180,7 +180,7 @@ class="adopt-injector"></script>-->
                 <a class="btn btn-info display-7 animate__animated animate__delay-1s animate__fadeIn" href="index.html" target="_blank">Portal</a>
             </div>
             <div style="float: left; margin: 0.6rem 0.6rem;">
-                <img src="assets/images/37-96x118.webp" style="max-width: 3rem;" alt="">
+                <img src="assets/images/imagem-96x96.webp" style="max-width: 3rem;" alt="">
             </div>
             <div style="float: left; margin: 0.6rem 0.6rem;">
                     <img src="assets/images/cte-original-sem-subtitulo.svg" style="max-width: 4rem;" alt="">
