create github pages

--- a/9.html
+++ b/9.html
@@ -21,9 +21,9 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=l4GuAA"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=l4GuAA" type="text/css">
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=449gwP"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=449gwP" type="text/css">
 
   
   <!--<meta name="adopt-website-id" content="6a8616c2-f959-43c9-a0a3-305a9a0b59af" />
@@ -339,15 +339,18 @@ class="adopt-injector"></script>-->
 					<li class="mbr-text item-wrap"><br></li>
 				</ul>
 			</div>
-			<div class="col-12 mt-5 footer-col">
-				<div class="mbr-section-btn align-left"><a class="btn btn-black display-7">Portal</a> <a class="btn btn-info display-7" href="index.html" target="_blank">Portal</a></div>
+			<div class="col-12 mt-5 footer-col" style="justify-content: left;">
+				<div class="mbr-section-btn align-left">
+                    <a class="btn btn-black display-7">Portal</a>
+                    <a class="btn btn-info display-7" href="index.html" target="_blank">Portal</a>
+                </div>
                 
-                <span>
+                <span style="margin: 0.6rem 0.6rem; line-height: 1.3;">
                     <a href="#">
                         <img src="assets/images/imagem-78x78.webp" alt="" style="max-width: 4rem;">
                     </a>
                 </span>
-                <span>
+                <span style="margin: 0.6rem 0.6rem; line-height: 1.3;">
                     <a href="index.html">
                         <img src="assets/images/cte-original-sem-subtitulo.svg" alt="Logotipo da Secretaria de Cultura, Turismo e Esporte de Urussanga" style="max-width: 4rem;">
                     </a>
