create github pages

--- a/5.html
+++ b/5.html
@@ -39,7 +39,7 @@ class="adopt-injector"></script>-->
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="#">
-                        <img src="assets/images/imagem-78x78.webp" alt="" style="height: 3rem;">
+                        <img src="assets/images/imagem-78x78.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-logo">
@@ -230,7 +230,7 @@ class="adopt-injector"></script>-->
                 
                 <span style="margin: 0.6rem 0.6rem; line-height: 1.3;">
                     <a href="#">
-                        <img src="assets/images/imagem-78x78.webp" alt="" style="max-width: 4rem;">
+                        <img src="assets/images/imagem-78x78.png" alt="" style="max-width: 4rem;">
                     </a>
                 </span>
                 <span style="margin: 0.6rem 0.6rem; line-height: 1.3;">
