--- a/12.html
+++ b/12.html
@@ -39,7 +39,7 @@ class="adopt-injector"></script>-->
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="#">
-                        <img src="assets/images/imagem-78x78.webp" alt="" style="height: 3rem;">
+                        <img src="assets/images/imagem-78x78.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-logo">
@@ -77,7 +77,7 @@ class="adopt-injector"></script>-->
       <div class="card col-md-12 col-lg-10">
         <div class="card-wrapper">
           <div class="image-wrapper d-flex justify-content-center mb-4">
-            <img src="assets/images/banner-1600x370.webp" alt="">
+            <img src="assets/images/banner-1600x370.png" alt="">
           </div>
           <div class="card-content-text">
             
@@ -148,7 +148,7 @@ class="adopt-injector"></script>-->
                 
                 <span style="margin: 0.6rem 0.6rem; line-height: 1.3;">
                     <a href="#">
-                        <img src="assets/images/imagem-78x78.webp" alt="" style="max-width: 4rem;">
+                        <img src="assets/images/imagem-78x78.png" alt="" style="max-width: 4rem;">
                     </a>
                 </span>
                 <span style="margin: 0.6rem 0.6rem; line-height: 1.3;">
